[ISSUE#23]  Correct the draw of application
Pass Mapviewer object instead of Classificaition object for ol.Map
Change the style of scrollbar

URL: https://github.com/filipedu11/deeapp/issues/21

--- a/workspace/static/css/map.css
+++ b/workspace/static/css/map.css
@@ -21,6 +21,24 @@
     background-color: rgba(255,255,255,0);
 }
 
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar
+{
+	width: 8px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+}
+
 html, body {
     height: 100%;
     width: 100%;
@@ -128,7 +146,12 @@ p {
 }
 
 .content{
-    margin: 10px;
+    padding: 10px;
+    overflow-y:auto;
+    position: absolute;
+    top: 40px;
+    bottom: 0;
+    width: 95%;
 }
 
 .stats{
@@ -308,3 +331,4 @@ p {
 #board{
     margin-top: 17px;
 }
+
